Repo has been put in order

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Finite difference method, description see in data.
+Finite difference method for diffusion equation, description see in report.
+
+2016.
